--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,35 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Notification_APP.MainPage">
+             x:Class="Notification_APP.MainPage"
+             xmlns:vm="clr-namespace:Notification_APP.ViewModel"
+             x:DataType="vm:Presenter">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+    <Grid>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+        <ListView BindingContext="{vm:Presenter}" ItemsSource="{Binding Items}">
+            <ListView.ItemTemplate >
+                <DataTemplate x:DataType="vm:NotificationItems">
+                    <ViewCell>
+                        <StackLayout Padding="10">
+                            <Label x:Name="NotificationName" Text="{Binding Name}" FontAttributes="Bold"/>
+                            <Label x:Name="NotificationDescription" Text="{Binding Description}"/>
+                            <Label x:Name="NotificationTimestamp" Text="{Binding Timestamp}" FontAttributes="Italic"/>
+                        </StackLayout>
+                        <!--
+                        <Frame HeightRequest="1000" WidthRequest="2000">
+                            <StackLayout Padding="10">
+                                <Label x:Name="NotificationName" Text="{Binding Name}" FontAttributes="Bold"/>
+                                <Label x:Name="NotificationDescription" Text="{Binding Description}"/>
+                                <Label x:Name="NotificationTimestamp" Text="{Binding Timestamp}" FontAttributes="Italic"/>
+                            </StackLayout>
+                        </Frame> -->
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+        <Button Clicked="CreateNotificationBtn" IsEnabled="True" WidthRequest="60" HeightRequest="60" Text="+"/>
+    </Grid>
 </ContentPage>
