--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,34 +1,92 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Notification_APP.MainPage"
-             xmlns:vm="clr-namespace:Notification_APP.ViewModel"
-             x:DataType="vm:Presenter">
+<ContentPage
+    x:Class="Notification_APP.MainPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:item="clr-namespace:Notification_APP.Model"
+    xmlns:viewmodel="clr-namespace:Notification_APP.ViewModel">
 
-    <Grid>
+    <ContentPage.Background>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+            <GradientStop Offset="0.0" Color="{AppThemeBinding Light={StaticResource LightColorGradient}, Dark={StaticResource DarkColorGradient}}" />
+            <GradientStop Offset="1.0" Color="{AppThemeBinding Light={StaticResource LightBackgroundColor}, Dark={StaticResource DarkBackgroundColor}}"/>
+        </LinearGradientBrush>
+    </ContentPage.Background>
 
-        <ListView BindingContext="{vm:Presenter}" ItemsSource="{Binding Items}">
-            <ListView.ItemTemplate >
-                <DataTemplate x:DataType="vm:NotificationItems">
-                    <ViewCell>
-                        <StackLayout Padding="10">
-                            <Label x:Name="NotificationName" Text="{Binding Name}" FontAttributes="Bold"/>
-                            <Label x:Name="NotificationDescription" Text="{Binding Description}"/>
-                            <Label x:Name="NotificationTimestamp" Text="{Binding Timestamp}" FontAttributes="Italic"/>
-                        </StackLayout>
-                        <!--
-                        <Frame HeightRequest="1000" WidthRequest="2000">
-                            <StackLayout Padding="10">
-                                <Label x:Name="NotificationName" Text="{Binding Name}" FontAttributes="Bold"/>
-                                <Label x:Name="NotificationDescription" Text="{Binding Description}"/>
-                                <Label x:Name="NotificationTimestamp" Text="{Binding Timestamp}" FontAttributes="Italic"/>
-                            </StackLayout>
-                        </Frame> -->
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+    <ContentPage.BindingContext>
+        <viewmodel:NotificationViewModel />
+    </ContentPage.BindingContext>
 
-        <Button Clicked="CreateNotificationBtn" IsEnabled="True" WidthRequest="60" HeightRequest="60" Text="+"/>
-    </Grid>
+    <ContentPage.Content>
+        <Grid>
+            <VerticalStackLayout Padding="20" Spacing="20">
+
+                <CollectionView x:Name="collectionView" ItemsSource="{Binding Items}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="item:Item">
+                            <Frame
+                                Margin="0,0,0,10"
+                                Padding="10"
+                                BackgroundColor="{AppThemeBinding Light={StaticResource LightNotificationBackground}, Dark={StaticResource DarkNotificationBackground}}"
+                                CornerRadius="10">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <VerticalStackLayout Grid.Column="0">
+                                        <Label
+                                            FontAttributes="Bold"
+                                            FontSize="18"
+                                            Text="{Binding Title}"
+                                            TextColor="{AppThemeBinding Light={StaticResource LightGeneralTextColor}, Dark={StaticResource DarkGeneralTextColor}}" />
+                                        <Label
+                                            FontSize="14"
+                                            Text="{Binding Description}"
+                                            TextColor="{AppThemeBinding Light={StaticResource LightGeneralTextColor}, Dark={StaticResource DarkGeneralTextColor}}" />
+                                        <Label
+                                            FontAttributes="Italic"
+                                            FontSize="12"
+                                            Text="{Binding Timestamp}"
+                                            TextColor="{AppThemeBinding Light={StaticResource LightGeneralTextColor}, Dark={StaticResource DarkGeneralTextColor}}" />
+                                    </VerticalStackLayout>
+                                    <HorizontalStackLayout
+                                        Grid.Column="1"
+                                        Spacing="10"
+                                        VerticalOptions="Center">
+                                        <ImageButton
+                                            Command="{Binding Path=BindingContext.ShowEditNotificationPopupCommand, Source={x:Reference collectionView}}"
+                                            HeightRequest="30"
+                                            Source="editing.png"
+                                            WidthRequest="30" />
+                                        <ImageButton
+                                            Command="{Binding Path=BindingContext.DeleteCommand, Source={x:Reference collectionView}}"
+                                            HeightRequest="30"
+                                            Source="trashbin.png"
+                                            WidthRequest="30" />
+                                    </HorizontalStackLayout>
+                                </Grid>
+                            </Frame>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+
+            </VerticalStackLayout>
+
+            <Button
+                Margin="20"
+                x:DataType="viewmodel:CreateNotificationViewModel"
+                BackgroundColor="{AppThemeBinding Light={StaticResource LightNotificationAddButtonBackgroundColor}, Dark={StaticResource DarkNotificationAddButtonBackgroundColor}}"
+                BindingContext="{viewmodel:CreateNotificationViewModel}"
+                Command="{Binding ShowCreateNotificationPopupCommand}"
+                CornerRadius="30"
+                FontSize="24"
+                HeightRequest="60"
+                HorizontalOptions="End"
+                Text="+"
+                TextColor="{AppThemeBinding Light={StaticResource LightNotificationAddButtonTextColor}, Dark={StaticResource DarkNotificationAddButtonTextColor}}"
+                VerticalOptions="End"
+                WidthRequest="60" />
+        </Grid>
+    </ContentPage.Content>
 </ContentPage>
